--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
     "class-validator": "^0.13.2",
-    "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.3.0",
-    "typeorm": "0.2"
+    "typeorm": "0.2",
+    "pg": "^8.7.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
