--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,31 @@
-version: '3.7'
+version: '3'
 services:
-  postgres:
-    image: 'postgres:latest'
+  mongo:
+    image: mongo
+    restart: always
     environment:
-      POSTGRES_DB: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres_password
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: root
     ports:
-      - "5432:5432"
+      - 27017:27017
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: root
+  # worker:
+  #   stdin_open: true
+  #   container_name: api-pizza-worker
+  #   build:
+  #     context: ./
+  #     dockerfile: dev.Dockerfile
+  #   volumes:
+  #     - ./:/app
+  #   ports:
+  #     - 3030:3000
+  #     - 5000:5000
+  #   environment:
+  #     MONGODB_CONNECTION: 'mongodb://root:root@mongo:27017?authSource=admin'
