--- a/package.json
+++ b/package.json
@@ -25,14 +25,13 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.0",
-    "@nestjs/typeorm": "^8.0.3",
     "class-validator": "^0.13.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.3.0",
-    "typeorm": "0.2",
-    "pg": "^8.7.3"
+    "@nestjs/mongoose": "^7.2.3",
+    "mongoose": "^5.11.15"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
